# mpdev

./: .gitignore  ChangeLog  Makefile.am  PKGBUILD.in  README.md  auto-ccld.sh  catChangeLog  cleanup.1  cleanup.c  conf-email  config.h  config.h.in  configure.ac  create_debian  create_rpm  create_service.in  default.configure  karma.1  karma.in  lastfm-scrobbler.1  lcd_display.in  librefm-scrobbler.1  mixer.in  moc-scrobbler-license  moc-scrobbler.in  mpd_local.te  mpdev-release.in  mpdev.1  mpdev.c  mpdev.spec.in  mpdev_cleanup.1  mpdev_cleanup.c  mpdev_rename.1  mpdev_rename.in  mpdev_update.1  mpdev_update.c  mpdhist.1  mpdhist.in  mpdplaylist.1  mpdplaylist.in  (+16 more)
.github/workflows/: manual.yml  mpdev-c-cpp.yml  mpdev-obs.yml  test.yml
debian/: Makefile  README  changelog.in  control  control.in  copyright  copyright.in  docs  mpdev.cron.d  mpdev.dsc.in  mpdev.install.in  postinst.in  preinst.in  prerm.in  rules.in
doc/: ChangeLog
obs/mpdev/: _service
